documents/examples/good/small/09-13-binding4.latf
void fun() {
    println("fun"); 
}

int main() {
    if (true) {
        if (false) {

        }
        else {
            void fun() {
                println("changed fun"); 
            }

            fun(); // changed fun
        }

        fun(); // fun
    }

    return 0;
}