documents/examples/bad/05-syntax_error_if_else.latf
int main() {
    if (x > 0) {
        println("x is positive")
    }
    else if (x < 0) { // <- error - missing parentheses after else: should be else { if (...) { ... } else { ... }}}
        println("x is negative")
    }
    else {
        println("x is zero")
    }

    return 0;
}